src/test/ui/asm/named-asm-labels.stderr
error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:11:15
   |
LL |         asm!("bar: nop");
   |               ^^^
   |
   = note: `#[deny(named_asm_labels)]` on by default
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:14:15
   |
LL |         asm!("abcd:");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:17:15
   |
LL |         asm!("foo: bar1: nop");
   |               ^^^  ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:21:15
   |
LL |         asm!("foo1: nop", "nop");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:22:15
   |
LL |         asm!("foo2: foo3: nop", "nop");
   |               ^^^^  ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:24:22
   |
LL |         asm!("nop", "foo4: nop");
   |                      ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:25:15
   |
LL |         asm!("foo5: nop", "foo6: nop");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:25:28
   |
LL |         asm!("foo5: nop", "foo6: nop");
   |                            ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:30:15
   |
LL |         asm!("foo7: nop; foo8: nop");
   |               ^^^^       ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:32:15
   |
LL |         asm!("foo9: nop; nop");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:33:20
   |
LL |         asm!("nop; foo10: nop");
   |                    ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:36:15
   |
LL |         asm!("bar2: nop\n bar3: nop");
   |               ^^^^        ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:38:15
   |
LL |         asm!("bar4: nop\n nop");
   |               ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:39:21
   |
LL |         asm!("nop\n bar5: nop");
   |                     ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:40:21
   |
LL |         asm!("nop\n bar6: bar7: nop");
   |                     ^^^^  ^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:46:13
   |
LL |             blah2: nop
   |             ^^^^^
LL |             blah3: nop
   |             ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:55:19
   |
LL |             nop ; blah4: nop
   |                   ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:69:15
   |
LL |         asm!("blah1: 2bar: nop");
   |               ^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:72:15
   |
LL |         asm!("def: def: nop");
   |               ^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:73:15
   |
LL |         asm!("def: nop\ndef: nop");
   |               ^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:74:15
   |
LL |         asm!("def: nop; def: nop");
   |               ^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:82:15
   |
LL |         asm!("fooo\u{003A} nop");
   |               ^^^^^^^^^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:83:15
   |
LL |         asm!("foooo\x3A nop");
   |               ^^^^^^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:86:15
   |
LL |         asm!("fooooo:\u{000A} nop");
   |               ^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:87:15
   |
LL |         asm!("foooooo:\x0A nop");
   |               ^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:91:14
   |
LL |         asm!("\x41\x42\x43\x3A\x20\x6E\x6F\x70");
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:102:13
   |
LL |             ab: nop // ab: does foo
   |             ^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:114:14
   |
LL |         asm!(include_str!("named-asm-labels.s"));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

warning: avoid using named labels in inline assembly
  --> $DIR/named-asm-labels.rs:124:19
   |
LL |             asm!("warned: nop");
   |                   ^^^^^^
   |
note: the lint level is defined here
  --> $DIR/named-asm-labels.rs:122:16
   |
LL |         #[warn(named_asm_labels)]
   |                ^^^^^^^^^^^^^^^^
   = help: only local labels of the form `<number>:` should be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: aborting due to 28 previous errors; 1 warning emitted

